Update Feature extraction with filtering.ipynb

--- a/Feature extraction with filtering.ipynb
+++ b/Feature extraction with filtering.ipynb
@@ -490,7 +490,9 @@
    "id": "67b9cc1b-3836-4c09-a050-41616abb3d02",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pee"
+   ]
   }
  ],
  "metadata": {
