--- a/Data Pocessing v2/importing features and just playing with the model.ipynb
+++ b/Data Pocessing v2/importing features and just playing with the model.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
    "id": "53393609-b3dd-4a69-994d-050a97c20098",
    "metadata": {},
    "outputs": [],
    "source": [
     "import wfdb\n",
     "import mne\n",
+    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -569,6 +570,25 @@
     "for i in feature_importances:\n",
     "    print(hrv_indices.columns[~nans][i[1]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "258b4908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(pipe, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7987aa64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
