--- a/Data Pocessing v2/Feature extraction with filtering.ipynb
+++ b/Data Pocessing v2/Feature extraction with filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "9d63cb6b-0dcb-42bc-9388-2ab0ede1e248",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import mne\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier,AdaBoostClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, hamming_loss,ConfusionMatrixDisplay\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "e22a5d2e-bba6-4be8-9f89-af2204c77b29",
    "metadata": {},
    "outputs": [],
@@ -203,20 +204,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
+   "id": "491712bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: ECG quality check failed at index 74. Marking as bad data. Error: cannot access local variable 'e' where it is not associated with a value\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_of_features_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m record_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mfr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpiotr\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDesktop\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mPSG data\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mApnea ECG\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ma01\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m features,labels \u001b[38;5;241m=\u001b[39m data_creation(record_path)\n\u001b[1;32m----> 3\u001b[0m list_of_features_train\u001b[38;5;241m.\u001b[39mappend(features)\n\u001b[0;32m      4\u001b[0m list_of_labels_train\u001b[38;5;241m.\u001b[39mappend(labels)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list_of_features_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "    record_path=fr\"C:\\Users\\piotr\\Desktop\\PSG data\\Apnea ECG\\a01\"\n",
+    "    features,labels = data_creation(record_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ed1985c9-beef-4f7b-9814-2315ab99c2ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "extracted_features=np.concatenate(list_of_features_train)\n",
-    "extracted_labels=np.concatenate(list_of_labels_train)\n",
-    "extracted_features[np.isinf(extracted_features)]=np.nan\n",
-    "nan_cols = np.all(np.isnan(extracted_features), axis=0)\n",
-    "clean_features = extracted_features[:, ~nan_cols]\n",
+    "features[np.isinf(features)]=np.nan\n",
+    "nan_cols = np.all(np.isnan(features), axis=0)\n",
+    "clean_features = features[:, ~nan_cols]\n",
     "nan_rows = np.isnan(clean_features).any(axis=1)\n",
     "nan_indexes = np.where(nan_rows)[0]\n",
     "features_cleaned = clean_features[~nan_rows]\n",
-    "labels_cleaned = np.delete(extracted_labels, nan_indexes)"
+    "labels_cleaned = np.delete(labels, nan_indexes)"
    ]
   },
   {
