--- a/Data Pocessing v2/Model Selection and Tuning.ipynb
+++ b/Data Pocessing v2/Model Selection and Tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "53393609-b3dd-4a69-994d-050a97c20098",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier,AdaBoostClassifier,ExtraTreesClassifier, BaggingClassifier, HistGradientBoostingClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, hamming_loss,ConfusionMatrixDisplay,roc_curve, auc,roc_auc_score,precision_recall_curve\n",
+    "from sklearn.metrics import accuracy_score,make_scorer, classification_report, confusion_matrix, hamming_loss,ConfusionMatrixDisplay,roc_curve, auc,roc_auc_score,precision_recall_curve\n",
     "from sklearn.pipeline import make_pipeline,Pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer,StandardScaler\n",
     "from mne.datasets import sample\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a91d1c41-1856-4344-9f79-c25b2052df65",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "id": "278a035a-2515-4232-88f9-35508d637d04",
    "metadata": {
     "scrolled": true
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "16b90fff-6c96-4c02-9345-2635843f6645",
    "metadata": {},
    "outputs": [
@@ -261,8 +261,8 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
-      "Best Parameters: {'xgbclassifier__subsample': 0.7, 'xgbclassifier__reg_lambda': 0.1, 'xgbclassifier__reg_alpha': 0.1, 'xgbclassifier__n_estimators': 557, 'xgbclassifier__min_child_weight': 5, 'xgbclassifier__max_depth': 4, 'xgbclassifier__learning_rate': 0.01, 'xgbclassifier__gamma': 1.0, 'xgbclassifier__colsample_bytree': 1.0}\n",
-      "Best ROC AUC Score: 0.8439957786462905\n"
+      "Best Parameters: {'xgbclassifier__subsample': 1.0, 'xgbclassifier__reg_lambda': 0.01, 'xgbclassifier__reg_alpha': 10.0, 'xgbclassifier__n_estimators': 182, 'xgbclassifier__min_child_weight': 3, 'xgbclassifier__max_depth': 4, 'xgbclassifier__learning_rate': 0.126, 'xgbclassifier__gamma': 0.5, 'xgbclassifier__colsample_bytree': 1.0}\n",
+      "Best accuracy Score: 0.7746684188246171\n"
      ]
     }
    ],
@@ -293,7 +293,6 @@
     "\n",
     "# Fit RandomizedSearch\n",
     "random_search.fit(X_train, y_train)\n",
-    "\n",
     "# Print best parameters and best score\n",
     "print(\"Best Parameters:\", random_search.best_params_)\n",
     "print(\"Best ROC AUC Score:\", random_search.best_score_)"
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "191cbcdb-7aae-4d92-b938-f3e922759e27",
    "metadata": {},
    "outputs": [
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "id": "efe9fe2e-74d3-42d4-8bdc-1ffa78ff19f2",
    "metadata": {},
    "outputs": [
@@ -368,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "id": "9a7a9a37-7cb1-48bc-a3a6-7dc217c26cbb",
    "metadata": {},
    "outputs": [
@@ -575,6 +574,137 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c49e79f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dat_file, hea_file \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mList of subjects in Apnea ECG study.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m))[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "dat_file, hea_file = np.random.choice(open(r\"List of subjects in Apnea ECG study.txt\").read().split(\"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c8d014d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a01',\n",
+       " 'a02',\n",
+       " 'a03',\n",
+       " 'a04',\n",
+       " 'a05',\n",
+       " 'a06',\n",
+       " 'a07',\n",
+       " 'a08',\n",
+       " 'a09',\n",
+       " 'a10',\n",
+       " 'a11',\n",
+       " 'a12',\n",
+       " 'a13',\n",
+       " 'a14',\n",
+       " 'a15',\n",
+       " 'a16',\n",
+       " 'a17',\n",
+       " 'a18',\n",
+       " 'a19',\n",
+       " 'a20',\n",
+       " 'b01',\n",
+       " 'b02',\n",
+       " 'b03',\n",
+       " 'b04',\n",
+       " 'b05',\n",
+       " 'c01',\n",
+       " 'c02',\n",
+       " 'c03',\n",
+       " 'c04',\n",
+       " 'c06',\n",
+       " 'c07',\n",
+       " 'c08',\n",
+       " 'c09',\n",
+       " 'c10',\n",
+       " 'x01',\n",
+       " 'x02',\n",
+       " 'x03',\n",
+       " 'x04',\n",
+       " 'x05',\n",
+       " 'x06',\n",
+       " 'x07',\n",
+       " 'x08',\n",
+       " 'x09',\n",
+       " 'x10',\n",
+       " 'x11',\n",
+       " 'x12',\n",
+       " 'x13',\n",
+       " 'x14',\n",
+       " 'x15',\n",
+       " 'x16',\n",
+       " 'x17',\n",
+       " 'x18',\n",
+       " 'x19',\n",
+       " 'x21',\n",
+       " 'x22',\n",
+       " 'x23',\n",
+       " 'x24',\n",
+       " 'x25',\n",
+       " 'x26',\n",
+       " 'x27',\n",
+       " 'x28',\n",
+       " 'x29',\n",
+       " 'x30',\n",
+       " 'x31',\n",
+       " 'x32',\n",
+       " 'x33',\n",
+       " 'x34',\n",
+       " 'x35']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open(r\"List of subjects in Apnea ECG study.txt\").read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25ad3158",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1906384"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(len(signal)*0.1,high=len(signal),size=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d0fd1ea",
    "metadata": {},
    "outputs": [],
    "source": []
