--- a/README
+++ b/README
@@ -1,2 +1,49 @@
-#ECG Informed Sleep Apnea Detection 
+#Replication of Apnea Detection Methods from arXiv:2302.05179v1
 
+##Overview
+This repository replicates the methods described in the paper "Title of Paper" (arXiv:2302.05179v1) for experimental and educational purposes.
+We follow the methodology outlined by the authors and use the Apnea-ECG Dataset, which was also employed in the original study.
+
+As part of this project, we also launched a web-based application that allows users to upload their own ECG signals and receive sleep apnea detection predictions using the models we implemented.
+
+##Purpose
+
+The main goals of this project are:
+
+To replicate and validate the results reported in the paper.
+To provide an educational resource for those interested in apnea detection and ECG-based classification.
+To create a practical application for real-time ECG analysis.
+
+##Dataset
+
+We use the Apnea-ECG dataset, which contains electrocardiogram (ECG) recordings for sleep apnea detection. For details on how to access and use this dataset, please refer to the official dataset documentation: Apnea-ECG Database.
+
+
+##Implementation
+
+The implementation follows the steps outlined in the paper, including:
+
+Data Preprocessing: Preparing the ECG signals for training and testing.
+Feature Extraction: Extracting features as described by the authors.
+Modeling and Classification: Building and training the models to detect sleep apnea events.
+
+Tools and Libraries
+
+
+**Web Application**
+
+The web application allows users to upload their ECG recordings and obtain predictions in real time.
+Visit the website here: Your Website URL
+The uploaded data is processed using the same methodology described in the paper, and the results are displayed in an easy-to-understand format.
+
+**Results**
+
+We aim to reproduce the key results from the paper and compare them with the published outcomes. Detailed analysis and performance evaluation will be documented.
+
+**Acknowledgments**
+
+We acknowledge the authors of the original paper for their contribution to the field and PhysioNet for providing the Apnea-ECG dataset.
+
+**Disclaimer**
+
+This project is for educational purposes only. It is not intended for clinical or diagnostic use.
