accuracy into precision

--- a/Model Selection, Tuning and Metrics.ipynb
+++ b/Model Selection, Tuning and Metrics.ipynb
@@ -2,30 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d318b243",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# =============================================================================\n",
-    "# Model Selection and Hyperparameter Tuning for ECG Apnea Detection\n",
-    "# =============================================================================\n",
-    "# This script:\n",
-    "#   - Loads preprocessed features for different signal interval lengths (60s, 90s, 120s)\n",
-    "#   - Performs model selection using un-tuned classifiers via 5-fold cross-validation\n",
-    "#   - Tunes hyperparameters for the top three models (Linear SVM, Gradient Boosting, AdaBoost)\n",
-    "#   - Retrains a selected model and then reduces the feature space based on feature importance\n",
-    "#   - Evaluates the final model using various metrics (classification report, ROC, confusion matrix)\n",
-    "#\n",
-    "# Make sure that the feature files and \"Feature Names\" pickle file exist in the \n",
-    "# specified directories.\n",
-    "#\n",
-    "# ============================================================================="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "53393609-b3dd-4a69-994d-050a97c20098",
    "metadata": {},
    "outputs": [],
@@ -82,21 +59,53 @@
       "RBF SVM: CV Accuracy = 0.5955\n",
       "Decision Tree: CV Accuracy = 0.7212\n",
       "Random Forest: CV Accuracy = 0.7285\n",
-      "AdaBoost: CV Accuracy = 0.7438\n",
-      "Gradient Boosting: CV Accuracy = 0.7445\n",
-      "XGBoost: CV Accuracy = 0.7306\n",
+      "AdaBoost: CV Accuracy = 0.7316\n",
+      "Gradient Boosting: CV Accuracy = 0.7447\n",
+      "XGBoost: CV Accuracy = 0.7279\n",
       "LGBM: CV Accuracy = 0.7389\n",
       "Extra Trees: CV Accuracy = 0.7262\n",
       "Bagging Classifier: CV Accuracy = 0.7149\n",
       "HistGradientBoosting: CV Accuracy = 0.7430\n",
       "Gaussian Naive Bayes: CV Accuracy = 0.6478\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6922\n",
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.5803\n",
+      "Bernoulli Naive Bayes: CV Accuracy = 0.6922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quadratic Discriminant Analysis: CV Accuracy = 0.6551\n",
       "Neural Network (MLP): CV Accuracy = 0.7099\n",
       "\n",
       "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7506\n",
-      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7445\n",
-      "Third Best Model Selected for Tuning (based on CV): AdaBoost with CV accuracy of 0.7438\n",
+      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7447\n",
+      "Third Best Model Selected for Tuning (based on CV): HistGradientBoosting with CV accuracy of 0.7430\n",
       "\n",
       "Testing for 90s intervals\n",
       "Nearest Neighbors: CV Accuracy = 0.6947\n",
@@ -104,20 +113,52 @@
       "RBF SVM: CV Accuracy = 0.6030\n",
       "Decision Tree: CV Accuracy = 0.7440\n",
       "Random Forest: CV Accuracy = 0.7335\n",
-      "AdaBoost: CV Accuracy = 0.7506\n",
-      "Gradient Boosting: CV Accuracy = 0.7589\n",
-      "XGBoost: CV Accuracy = 0.7444\n",
+      "AdaBoost: CV Accuracy = 0.7310\n",
+      "Gradient Boosting: CV Accuracy = 0.7596\n",
+      "XGBoost: CV Accuracy = 0.7373\n",
       "LGBM: CV Accuracy = 0.7510\n",
       "Extra Trees: CV Accuracy = 0.7311\n",
       "Bagging Classifier: CV Accuracy = 0.7246\n",
       "HistGradientBoosting: CV Accuracy = 0.7479\n",
       "Gaussian Naive Bayes: CV Accuracy = 0.6542\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6960\n",
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.6062\n",
-      "Neural Network (MLP): CV Accuracy = 0.7265\n",
+      "Bernoulli Naive Bayes: CV Accuracy = 0.6960\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quadratic Discriminant Analysis: CV Accuracy = 0.6108\n",
+      "Neural Network (MLP): CV Accuracy = 0.7227\n",
       "\n",
       "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7701\n",
-      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7589\n",
+      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7596\n",
       "Third Best Model Selected for Tuning (based on CV): LGBM with CV accuracy of 0.7510\n",
       "\n",
       "Testing for 120s intervals\n",
@@ -126,21 +167,53 @@
       "RBF SVM: CV Accuracy = 0.6043\n",
       "Decision Tree: CV Accuracy = 0.7530\n",
       "Random Forest: CV Accuracy = 0.7269\n",
-      "AdaBoost: CV Accuracy = 0.7653\n",
+      "AdaBoost: CV Accuracy = 0.7468\n",
       "Gradient Boosting: CV Accuracy = 0.7722\n",
-      "XGBoost: CV Accuracy = 0.7540\n",
+      "XGBoost: CV Accuracy = 0.7552\n",
       "LGBM: CV Accuracy = 0.7618\n",
       "Extra Trees: CV Accuracy = 0.7457\n",
       "Bagging Classifier: CV Accuracy = 0.7337\n",
       "HistGradientBoosting: CV Accuracy = 0.7632\n",
       "Gaussian Naive Bayes: CV Accuracy = 0.6531\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6959\n",
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.5810\n",
+      "Bernoulli Naive Bayes: CV Accuracy = 0.6959\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 0 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n",
+      "/home/sorfosh/miniconda3/envs/work/lib/python3.13/site-packages/sklearn/discriminant_analysis.py:1024: LinAlgWarning: The covariance matrix of class 1 is not full rank. Increasing the value of parameter `reg_param` might help reducing the collinearity.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quadratic Discriminant Analysis: CV Accuracy = 0.5664\n",
       "Neural Network (MLP): CV Accuracy = 0.7376\n",
       "\n",
       "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7792\n",
       "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7722\n",
-      "Third Best Model Selected for Tuning (based on CV): AdaBoost with CV accuracy of 0.7653\n"
+      "Third Best Model Selected for Tuning (based on CV): HistGradientBoosting with CV accuracy of 0.7632\n"
      ]
     }
    ],
@@ -201,7 +274,7 @@
     "        pipe = make_pipeline(StandardScaler(), SelectKBest(score_func=f_classif, k=40), clf)\n",
     "    \n",
     "        # 5-fold cross-validation on training data\n",
-    "        scores = cross_val_score(pipe, X_train, y_train, cv=5, scoring='accuracy', error_score='raise')\n",
+    "        scores = cross_val_score(pipe, X_train, y_train, cv=5, scoring='precision', error_score='raise')\n",
     "        avg_cv_score = np.mean(scores)\n",
     "    \n",
     "        results[name] = avg_cv_score\n",
@@ -511,7 +584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "work",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
