--- a/Model Selection, Tuning and Metrics.ipynb
+++ b/Model Selection, Tuning and Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53393609-b3dd-4a69-994d-050a97c20098",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "278a035a-2515-4232-88f9-35508d637d04",
    "metadata": {
     "scrolled": true
@@ -54,20 +54,20 @@
      "text": [
       "\n",
       "Testing for 60s intervals\n",
-      "Nearest Neighbors: CV Accuracy = 0.6854\n",
-      "Linear SVM: CV Accuracy = 0.7506\n",
-      "RBF SVM: CV Accuracy = 0.5955\n",
-      "Decision Tree: CV Accuracy = 0.7212\n",
-      "Random Forest: CV Accuracy = 0.7285\n",
-      "AdaBoost: CV Accuracy = 0.7316\n",
-      "Gradient Boosting: CV Accuracy = 0.7447\n",
-      "XGBoost: CV Accuracy = 0.7279\n",
-      "LGBM: CV Accuracy = 0.7389\n",
-      "Extra Trees: CV Accuracy = 0.7262\n",
-      "Bagging Classifier: CV Accuracy = 0.7149\n",
-      "HistGradientBoosting: CV Accuracy = 0.7430\n",
-      "Gaussian Naive Bayes: CV Accuracy = 0.6478\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6922\n"
+      "Nearest Neighbors: CV Average Precision= 0.5861\n",
+      "Linear SVM: CV Average Precision= 0.7450\n",
+      "RBF SVM: CV Average Precision= 0.5657\n",
+      "Decision Tree: CV Average Precision= 0.6624\n",
+      "Random Forest: CV Average Precision= 0.6617\n",
+      "AdaBoost: CV Average Precision= 0.6984\n",
+      "Gradient Boosting: CV Average Precision= 0.7439\n",
+      "XGBoost: CV Average Precision= 0.7227\n",
+      "LGBM: CV Average Precision= 0.7355\n",
+      "Extra Trees: CV Average Precision= 0.7091\n",
+      "Bagging Classifier: CV Average Precision= 0.6677\n",
+      "HistGradientBoosting: CV Average Precision= 0.7412\n",
+      "Gaussian Naive Bayes: CV Average Precision= 0.6468\n",
+      "Bernoulli Naive Bayes: CV Average Precision= 0.6557\n"
      ]
     },
     {
@@ -100,28 +100,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.6551\n",
-      "Neural Network (MLP): CV Accuracy = 0.7099\n",
+      "Quadratic Discriminant Analysis: CV Average Precision= 0.6076\n",
+      "Neural Network (MLP): CV Average Precision= 0.6856\n",
       "\n",
-      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7506\n",
-      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7447\n",
-      "Third Best Model Selected for Tuning (based on CV): HistGradientBoosting with CV accuracy of 0.7430\n",
+      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7450\n",
+      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7439\n",
+      "Third Best Model Selected for Tuning (based on CV): HistGradientBoosting with CV accuracy of 0.7412\n",
       "\n",
       "Testing for 90s intervals\n",
-      "Nearest Neighbors: CV Accuracy = 0.6947\n",
-      "Linear SVM: CV Accuracy = 0.7701\n",
-      "RBF SVM: CV Accuracy = 0.6030\n",
-      "Decision Tree: CV Accuracy = 0.7440\n",
-      "Random Forest: CV Accuracy = 0.7335\n",
-      "AdaBoost: CV Accuracy = 0.7310\n",
-      "Gradient Boosting: CV Accuracy = 0.7596\n",
-      "XGBoost: CV Accuracy = 0.7373\n",
-      "LGBM: CV Accuracy = 0.7510\n",
-      "Extra Trees: CV Accuracy = 0.7311\n",
-      "Bagging Classifier: CV Accuracy = 0.7246\n",
-      "HistGradientBoosting: CV Accuracy = 0.7479\n",
-      "Gaussian Naive Bayes: CV Accuracy = 0.6542\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6960\n"
+      "Nearest Neighbors: CV Average Precision= 0.5856\n",
+      "Linear SVM: CV Average Precision= 0.7673\n",
+      "RBF SVM: CV Average Precision= 0.5785\n",
+      "Decision Tree: CV Average Precision= 0.6561\n",
+      "Random Forest: CV Average Precision= 0.6781\n",
+      "AdaBoost: CV Average Precision= 0.6995\n",
+      "Gradient Boosting: CV Average Precision= 0.7592\n",
+      "XGBoost: CV Average Precision= 0.7269\n",
+      "LGBM: CV Average Precision= 0.7481\n",
+      "Extra Trees: CV Average Precision= 0.7084\n",
+      "Bagging Classifier: CV Average Precision= 0.6751\n",
+      "HistGradientBoosting: CV Average Precision= 0.7474\n",
+      "Gaussian Naive Bayes: CV Average Precision= 0.6352\n",
+      "Bernoulli Naive Bayes: CV Average Precision= 0.6386\n"
      ]
     },
     {
@@ -154,28 +154,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.6108\n",
-      "Neural Network (MLP): CV Accuracy = 0.7227\n",
+      "Quadratic Discriminant Analysis: CV Average Precision= 0.6243\n",
+      "Neural Network (MLP): CV Average Precision= 0.7061\n",
       "\n",
-      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7701\n",
-      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7596\n",
-      "Third Best Model Selected for Tuning (based on CV): LGBM with CV accuracy of 0.7510\n",
+      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7673\n",
+      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7592\n",
+      "Third Best Model Selected for Tuning (based on CV): LGBM with CV accuracy of 0.7481\n",
       "\n",
       "Testing for 120s intervals\n",
-      "Nearest Neighbors: CV Accuracy = 0.6898\n",
-      "Linear SVM: CV Accuracy = 0.7792\n",
-      "RBF SVM: CV Accuracy = 0.6043\n",
-      "Decision Tree: CV Accuracy = 0.7530\n",
-      "Random Forest: CV Accuracy = 0.7269\n",
-      "AdaBoost: CV Accuracy = 0.7468\n",
-      "Gradient Boosting: CV Accuracy = 0.7722\n",
-      "XGBoost: CV Accuracy = 0.7552\n",
-      "LGBM: CV Accuracy = 0.7618\n",
-      "Extra Trees: CV Accuracy = 0.7457\n",
-      "Bagging Classifier: CV Accuracy = 0.7337\n",
-      "HistGradientBoosting: CV Accuracy = 0.7632\n",
-      "Gaussian Naive Bayes: CV Accuracy = 0.6531\n",
-      "Bernoulli Naive Bayes: CV Accuracy = 0.6959\n"
+      "Nearest Neighbors: CV Average Precision= 0.5914\n",
+      "Linear SVM: CV Average Precision= 0.7897\n",
+      "RBF SVM: CV Average Precision= 0.5796\n",
+      "Decision Tree: CV Average Precision= 0.6912\n",
+      "Random Forest: CV Average Precision= 0.6888\n",
+      "AdaBoost: CV Average Precision= 0.7129\n",
+      "Gradient Boosting: CV Average Precision= 0.7724\n",
+      "XGBoost: CV Average Precision= 0.7558\n",
+      "LGBM: CV Average Precision= 0.7684\n",
+      "Extra Trees: CV Average Precision= 0.7289\n",
+      "Bagging Classifier: CV Average Precision= 0.6898\n",
+      "HistGradientBoosting: CV Average Precision= 0.7680\n",
+      "Gaussian Naive Bayes: CV Average Precision= 0.6277\n",
+      "Bernoulli Naive Bayes: CV Average Precision= 0.6366\n"
      ]
     },
     {
@@ -208,12 +208,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quadratic Discriminant Analysis: CV Accuracy = 0.5664\n",
-      "Neural Network (MLP): CV Accuracy = 0.7376\n",
+      "Quadratic Discriminant Analysis: CV Average Precision= 0.6207\n",
+      "Neural Network (MLP): CV Average Precision= 0.7252\n",
       "\n",
-      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7792\n",
-      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7722\n",
-      "Third Best Model Selected for Tuning (based on CV): HistGradientBoosting with CV accuracy of 0.7632\n"
+      "Best Model Selected for Tuning (based on CV): Linear SVM with CV accuracy of 0.7897\n",
+      "Second Best Model Selected for Tuning (based on CV): Gradient Boosting with CV accuracy of 0.7724\n",
+      "Third Best Model Selected for Tuning (based on CV): LGBM with CV accuracy of 0.7684\n"
      ]
     }
    ],
@@ -274,11 +274,11 @@
     "        pipe = make_pipeline(StandardScaler(), SelectKBest(score_func=f_classif, k=40), clf)\n",
     "    \n",
     "        # 5-fold cross-validation on training data\n",
-    "        scores = cross_val_score(pipe, X_train, y_train, cv=5, scoring='precision', error_score='raise')\n",
+    "        scores = cross_val_score(pipe, X_train, y_train, cv=5, scoring='average_precision', error_score='raise')\n",
     "        avg_cv_score = np.mean(scores)\n",
     "    \n",
     "        results[name] = avg_cv_score\n",
-    "        print(f\"{name}: CV Accuracy = {avg_cv_score:.4f}\")\n",
+    "        print(f\"{name}: CV Average Precision= {avg_cv_score:.4f}\")\n",
     "    \n",
     "    # Select best model based solely on CV accuracy\n",
     "    sorted_models = sorted(results, key=lambda x: results[x], reverse=True)\n",
@@ -310,7 +310,7 @@
     "    'selectkbest__k': [30, 40, 50, 'all'],\n",
     "    'svc__C': [0.01, 0.1, 1, 10, 100]\n",
     "}\n",
-    "grid_svm = GridSearchCV(pipe_svm, param_grid_svm, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_svm = GridSearchCV(pipe_svm, param_grid_svm, cv=5, scoring='average_precision', n_jobs=-1)\n",
     "grid_svm.fit(X_train, y_train)\n",
     "print(\"Best parameters for Linear SVM:\", grid_svm.best_params_)\n",
     "print(\"Best CV accuracy for Linear SVM:\", grid_svm.best_score_)\n",
