--- a/Model Selection, Tuning and Metrics.ipynb
+++ b/Model Selection, Tuning and Metrics.ipynb
@@ -579,7 +579,9 @@
    "id": "a81dd22a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Small note hehe"
+   ]
   }
  ],
  "metadata": {
